@@ -1,5 +1,8 @@
 [@Milla]
 
+[Prereqs]
+Moo = 1.007000 ; handles wrapping constructors
+
 [AutoPrereqs]
 [Test::Compile]
 [Test::CleanNamespaces]
